<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="id.appstudioplus.managerplus.PositionSampleActivity">

    <item
        android:id="@+id/cloud_gridve"
        android:icon="@drawable/ic_root_gdrive"
        android:orderInCategory="100"
        android:title="@string/cloud_gdrive"
        app:showAsAction="never" />

    <item
        android:id="@+id/cloud_dropbox"
        android:icon="@drawable/ic_root_dropbox"
        android:orderInCategory="100"
        android:title="@string/cloud_dropbox"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/cloud_onedrive"
        android:icon="@drawable/ic_root_onedrive"
        android:orderInCategory="100"
        android:title="@string/cloud_onedrive"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/cloud_box"
        android:icon="@drawable/ic_root_box"
        android:orderInCategory="100"
        android:title="@string/cloud_box"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/network_ftp"
        android:icon="@drawable/ic_connection_network"
        android:orderInCategory="100"
        android:title="@string/network_ftp"
        app:showAsAction="never" />


</menu>
